<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lbl_financiamento_imovel"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/cbox_novo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbox_novo"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_valor_imovel"
        android:layout_below="@+id/cbox_novo"
        android:layout_alignStart="@+id/textView2" />

    <EditText
        android:id="@+id/edt_valor_imovel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_valor_imovel"
        android:layout_below="@+id/edt_valor_imovel"
        android:text="@string/lbl_valor_entrada" />

    <EditText
        android:id="@+id/edt_valor_entrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edt_valor_imovel"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_valor_entrada"
        android:layout_below="@+id/edt_valor_entrada"
        android:text="@string/lbl_quantidade_parcelas" />

    <EditText
        android:id="@+id/edt_qtd_parcelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_alignEnd="@+id/edt_valor_entrada" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_qtd_parcelas"
        android:layout_below="@+id/edt_qtd_parcelas"
        android:text="@string/lbl_renda_liquida_mensal" />

    <EditText
        android:id="@+id/edt_renda_liquida_mensal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_alignEnd="@+id/edt_qtd_parcelas" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnCalcular"
        android:text="@string/btn_calcular"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnVoltar"
        android:text="@string/btn_voltar"
        android:layout_below="@+id/btn_calcular"
        android:layout_alignStart="@+id/btn_calcular"
        android:layout_alignEnd="@+id/btn_calcular" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_renda_liquida_mensal"
        android:text="@string/btn_juros"
        android:layout_below="@+id/edt_renda_liquida_mensal" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_alignEnd="@+id/edt_renda_liquida_mensal" />

</RelativeLayout>
