<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_resultado_final"
        android:textSize="24sp"
        android:layout_marginTop="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:text="@string/lbl_valor_parcela"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/edt_valor_parcela" />

    <EditText
        android:id="@+id/edt_valor_parcela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lbl_vazio"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_valor_parcela"
        android:layout_below="@+id/edt_valor_parcela"
        android:text="@string/lbl_valor_final" />

    <EditText
        android:id="@+id/edt_valor_final_financiamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lbl_vazio"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_valor_final_financiamento"
        android:layout_below="@+id/edt_valor_final_financiamento"
        android:text="@string/lbl_obs" />

    <EditText
        android:id="@+id/edt_obs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView10"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lbl_vazio"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_nova_simulacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_obs"
        android:onClick="novaSimulacao"
        android:text="@string/btn_nova_simulacao"
        android:layout_alignStart="@+id/textView10"
        android:layout_alignEnd="@+id/edt_valor_final_financiamento" />
</RelativeLayout>
